# smartfi

./: .gitignore  docker-compose.yml  nginx.conf
user-service/: .env  Dockerfile  alembic.ini  pyproject.toml
user-service/alembic/: README  env.py
user-service/alembic/versions/: 96b7805f0ac3_create_user_table.py
user-service/user_service/: crud.py  database.py  main.py  models.py  schemas.py  schemes.py
