[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["deadshumz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
